src/parser.js
// @generated by Peggy 4.0.2.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { edn_multi: peg$parseedn_multi };
  var peg$startRuleFunction = peg$parseedn_multi;

  var peg$c0 = ";";
  var peg$c1 = "\n";
  var peg$c2 = "#_";
  var peg$c3 = "nil";
  var peg$c4 = "true";
  var peg$c5 = "false";
  var peg$c6 = "\\newline";
  var peg$c7 = "\\return";
  var peg$c8 = "\\space";
  var peg$c9 = "\\tab";
  var peg$c10 = "\\u";
  var peg$c11 = "\\";
  var peg$c12 = "/";
  var peg$c13 = ":";
  var peg$c14 = "b";
  var peg$c15 = "f";
  var peg$c16 = "n";
  var peg$c17 = "r";
  var peg$c18 = "t";
  var peg$c19 = "\"";
  var peg$c20 = "N";
  var peg$c21 = "M";
  var peg$c22 = ".";
  var peg$c23 = "(";
  var peg$c24 = ")";
  var peg$c25 = "[";
  var peg$c26 = "]";
  var peg$c27 = "#{";
  var peg$c28 = "}";
  var peg$c29 = "{";
  var peg$c30 = "#:";
  var peg$c31 = "#";
  var peg$c32 = "^";

  var peg$r0 = /^[ \t\n\r,]/;
  var peg$r1 = /^[^\n]/;
  var peg$r2 = /^[\-.*+!_?$%&=<>|a-z]/i;
  var peg$r3 = /^[:#0-9]/;
  var peg$r4 = /^[\-+.]/;
  var peg$r5 = /^[a-z]/i;
  var peg$r6 = /^[^\0-\x1F]/;
  var peg$r7 = /^[0-9a-f]/i;
  var peg$r8 = /^["\/\\]/;
  var peg$r9 = /^[^\\"]/;
  var peg$r10 = /^[+\-]/;
  var peg$r11 = /^[eE]/;
  var peg$r12 = /^[1-9]/;
  var peg$r13 = /^[0-9]/;

  var peg$e0 = peg$otherExpectation("whitespace");
  var peg$e1 = peg$classExpectation([" ", "\t", "\n", "\r", ","], false, false);
  var peg$e2 = peg$literalExpectation(";", false);
  var peg$e3 = peg$classExpectation(["\n"], true, false);
  var peg$e4 = peg$literalExpectation("\n", false);
  var peg$e5 = peg$literalExpectation("#_", false);
  var peg$e6 = peg$anyExpectation();
  var peg$e7 = peg$classExpectation(["-", ".", "*", "+", "!", "_", "?", "$", "%", "&", "=", "<", ">", "|", ["a", "z"]], false, true);
  var peg$e8 = peg$classExpectation([":", "#", ["0", "9"]], false, false);
  var peg$e9 = peg$classExpectation(["-", "+", "."], false, false);
  var peg$e10 = peg$classExpectation([["a", "z"]], false, true);
  var peg$e11 = peg$literalExpectation("nil", false);
  var peg$e12 = peg$literalExpectation("true", false);
  var peg$e13 = peg$literalExpectation("false", false);
  var peg$e14 = peg$literalExpectation("\\newline", false);
  var peg$e15 = peg$literalExpectation("\\return", false);
  var peg$e16 = peg$literalExpectation("\\space", false);
  var peg$e17 = peg$literalExpectation("\\tab", false);
  var peg$e18 = peg$literalExpectation("\\u", false);
  var peg$e19 = peg$literalExpectation("\\", false);
  var peg$e20 = peg$classExpectation([["\0", "\x1F"]], true, false);
  var peg$e21 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);
  var peg$e22 = peg$literalExpectation("/", false);
  var peg$e23 = peg$literalExpectation(":", false);
  var peg$e24 = peg$otherExpectation("string");
  var peg$e25 = peg$classExpectation(["\"", "/", "\\"], false, false);
  var peg$e26 = peg$literalExpectation("b", false);
  var peg$e27 = peg$literalExpectation("f", false);
  var peg$e28 = peg$literalExpectation("n", false);
  var peg$e29 = peg$literalExpectation("r", false);
  var peg$e30 = peg$literalExpectation("t", false);
  var peg$e31 = peg$literalExpectation("\"", false);
  var peg$e32 = peg$classExpectation(["\\", "\""], true, false);
  var peg$e33 = peg$literalExpectation("N", false);
  var peg$e34 = peg$classExpectation(["+", "-"], false, false);
  var peg$e35 = peg$literalExpectation("M", false);
  var peg$e36 = peg$literalExpectation(".", false);
  var peg$e37 = peg$classExpectation(["e", "E"], false, false);
  var peg$e38 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e39 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e40 = peg$literalExpectation("(", false);
  var peg$e41 = peg$literalExpectation(")", false);
  var peg$e42 = peg$literalExpectation("[", false);
  var peg$e43 = peg$literalExpectation("]", false);
  var peg$e44 = peg$literalExpectation("#{", false);
  var peg$e45 = peg$literalExpectation("}", false);
  var peg$e46 = peg$literalExpectation("{", false);
  var peg$e47 = peg$literalExpectation("#:", false);
  var peg$e48 = peg$literalExpectation("#", false);
  var peg$e49 = peg$literalExpectation("^", false);

  var peg$f0 = function() { return null };
  var peg$f1 = function() { return true };
  var peg$f2 = function() { return false };
  var peg$f3 = function() { return {char: "\n" } };
  var peg$f4 = function() { return { char: "\r" } };
  var peg$f5 = function() { return {char: " " } };
  var peg$f6 = function() { return {char: "\t" } };
  var peg$f7 = function(digits) {
          return {char: String.fromCharCode(parseInt(digits, 16))};
        };
  var peg$f8 = function(ch) { return {char: ch } };
  var peg$f9 = function(ns, symbol) { 
  if (ns) {
    return {
      ns: ns,
      symbol: symbol
    }
  } else {
    return {
      symbol: symbol
    }
  }
 };
  var peg$f10 = function(s) { 
  if (s.ns) {
    return {
      ns: s.ns,
      keyword: s.symbol
    }
  } else {
    return {
      keyword: s.symbol
    }
  }
 };
  var peg$f11 = function(chars) { return chars.join(""); };
  var peg$f12 = function() { return "\b"; };
  var peg$f13 = function() { return "\f"; };
  var peg$f14 = function() { return "\n"; };
  var peg$f15 = function() { return "\r"; };
  var peg$f16 = function() { return "\t"; };
  var peg$f17 = function(sequence) { return sequence; };
  var peg$f18 = function(i) { return parseInt(i) };
  var peg$f19 = function() { return parseFloat(text()) };
  var peg$f20 = function(i) { return parseFloat(i) };
  var peg$f21 = function(values) { return {list: values} };
  var peg$f22 = function(values) { 
  return {set: values}
};
  var peg$f23 = function(kv) { 
  return {map: kv}
};
  var peg$f24 = function(ns, m) {
  for (const [k,v] of m.map) {
    if (k.keyword) {
      if (k.ns == "_") {
        delete k.ns
      } else if (k.ns === undefined) {
        k.ns = ns.symbol
      }
    }
  }
  return m
};
  var peg$f25 = function(tag, value) { return {tag, value} };
  var peg$f26 = function(tag) { return [[{symbol: 'tag'}, tag]] };
  var peg$f27 = function(k) { return [[k, true]] };
  var peg$f28 = function(m) { return m.map };
  var peg$f29 = function(meta, value) { return {meta, value} };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseedn_multi() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = [];
    s3 = peg$parsevalue();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parsews();
      if (s4 !== peg$FAILED) {
        s4 = peg$parsevalue();
        if (s4 === peg$FAILED) {
          peg$currPos = s3;
          s3 = peg$FAILED;
        } else {
          s3 = s4;
        }
      } else {
        s3 = s4;
      }
    }
    s3 = peg$parsews();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s0 = s2;

    return s0;
  }

  function peg$parseedn() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parsevalue();
    if (s2 !== peg$FAILED) {
      s3 = peg$parsews();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s0 = s2;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsevalue() {
    var s0;

    s0 = peg$parsenil();
    if (s0 === peg$FAILED) {
      s0 = peg$parsetrue();
      if (s0 === peg$FAILED) {
        s0 = peg$parsefalse();
        if (s0 === peg$FAILED) {
          s0 = peg$parsestring();
          if (s0 === peg$FAILED) {
            s0 = peg$parsechar();
            if (s0 === peg$FAILED) {
              s0 = peg$parsefloat();
              if (s0 === peg$FAILED) {
                s0 = peg$parseinteger();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsesymbol();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsekeyword();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parselist();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parsevector();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseset();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parsemap();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parsens_map();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parsetag();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parsemeta();
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsews() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parsecomment();
      if (s1 === peg$FAILED) {
        s1 = peg$parseskip();
      }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = input.charAt(peg$currPos);
        if (peg$r0.test(s1)) {
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s1 === peg$FAILED) {
          s1 = peg$parsecomment();
          if (s1 === peg$FAILED) {
            s1 = peg$parseskip();
          }
        }
      }
    } else {
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 59) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r1.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r1.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
      if (input.charCodeAt(peg$currPos) === 10) {
        s3 = peg$c1;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s3 === peg$FAILED) {
        s3 = peg$parseEOF();
      }
      if (s3 !== peg$FAILED) {
        s1 = [s1, s2, s3];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseskip() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseedn();
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEOF() {
    var s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = undefined;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesymbolChar() {
    var s0, s1;

    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r2.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = input.charAt(peg$currPos);
        if (peg$r2.test(s1)) {
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenotFirstSymbolChar() {
    var s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r3.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsesymbolChar();
    }

    return s0;
  }

  function peg$parsenonNSsymbol() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = input.charAt(peg$currPos);
    if (peg$r4.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s2 !== peg$FAILED) {
      s3 = input.charAt(peg$currPos);
      if (peg$r5.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e10); }
      }
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parsenotFirstSymbolChar();
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$parsenotFirstSymbolChar();
        }
        s2 = [s2, s3, s4];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = peg$currPos;
      s2 = peg$parsesymbolChar();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsenotFirstSymbolChar();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsenotFirstSymbolChar();
        }
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parsenil() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e11); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsetrue() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e12); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsefalse() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e13); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsechar() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
